# minishell

./: Makefile  main.c
built_in/: get_envp.c  m_builtins.h  m_echo.c  m_env.c  m_exit.c  m_export.c  m_unset.c  minishell.h  pwd.c
includes/: minishell.h
minishell/: main.c
minishell/includes/: minishell.h
minishell/srcs/builtins/: get_envp.c  m_unset.c
minishell/srcs/execution/: exec.c  handle_args.c
minishell/srcs/redirects/: redirects.c
minishell_builtins/: m_cd.c  m_env.c  m_exit.c  m_export.c  m_unset.c  pwd.c
srcs/builtins/: CMakeLists.txt  dings.c  env_ops.c  get_envp.c  m_builtins.c  m_cd.c  m_echo.c  m_env.c  m_exit.c  m_export.c  m_unset.c  pwd.c
srcs/execution/: exec.c  find_exec.c
srcs/parser/: cmds.c
srcs/redirects/: heredoc.c  redirections.c  redirects.c
srcs/utils/: print.c  str_utils2.c
